--- a/assets/sass/variables/_fonts.scss
+++ b/assets/sass/variables/_fonts.scss
@@ -20,6 +20,7 @@ $secondary-font:             'Fira Mono';
 // -----------------------------------------------------------------------------
 $font-size:                  20px;
 
+$fh0:                        4rem;
 $fh1:                        3rem;
 $fh2:                        2rem;
 $fh3:                        1.5rem;
