--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -263,7 +263,6 @@ body {
 .icon-menu {
   animation: menu-h-in .333s ease-out forwards;
   appearance: none;
-  background-color: white;
   border: 0;
   box-shadow: none;
   cursor: pointer;
@@ -295,62 +294,17 @@ body {
     transform-origin: center;
     transition: fill 50ms ease-out, width 150ms ease-out, transform 150ms ease-out;
     width: 32px; }
-    .icon-menu rect:nth-child(1) {
-      transform: translateY(7.5px);
+    .icon-menu rect:nth-child(odd) {
+      transform: translateY(10.5px);
       transition-delay: 50ms; }
-    .icon-menu rect:nth-child(2) {
-      transform: translateY(15px);
+    .icon-menu rect:nth-child(even) {
+      transform: translateY(21px);
       transition-delay: 100ms; }
-    .icon-menu rect:nth-child(3) {
-      transform: translateY(22.5px);
-      transition-delay: 150ms; }
-
-@keyframes bounce-1 {
-  0% {
-    width: 32px; }
-  33% {
-    width: 32px; }
-  66% {
-    width: 96.0961px; }
-  100% {
-    width: 48.04805px; } }
-  .icon-menu:hover rect:nth-child(1) {
-    animation: bounce-1 150ms ease-out forwards;
-    fill: #179bcf;
-    width: 48.04805px; }
-
-@keyframes bounce-2 {
-  0% {
-    width: 32px; }
-  33% {
-    width: 16px; }
-  66% {
-    width: 48.04805px; }
-  100% {
-    width: 24.02402px; } }
-  .icon-menu:hover rect:nth-child(2) {
-    animation: bounce-2 300ms ease-out forwards;
-    fill: #31b4e8;
-    width: 24.02402px; }
-
-@keyframes bounce-3 {
-  0% {
-    width: 32px; }
-  33% {
-    width: 10.66667px; }
-  66% {
-    width: 32.03203px; }
-  100% {
-    width: 16.01602px; } }
-  .icon-menu:hover rect:nth-child(3) {
-    animation: bounce-3 450ms ease-out forwards;
-    fill: #5fc5ed;
-    width: 16.01602px; }
-  @media (max-width: 640px) {
-    .icon-menu:hover rect {
-      animation: none !important;
-      fill: black !important;
-      width: 32px !important; } }
+  .icon-menu:hover rect {
+    fill: #31b4e8; }
+    @media (max-width: 640px) {
+      .icon-menu:hover rect {
+        fill: black !important; } }
   .icon-menu.nav-close {
     background-color: transparent; }
 
@@ -375,7 +329,7 @@ body {
       animation: cross-r .666s ease-out forwards; }
     @media (max-width: 640px) {
       .icon-menu.nav-close rect {
-        fill: white !important; }
+        fill: black !important; }
         .icon-menu.nav-close rect:nth-child(odd) {
           animation: cross-l 0.666s ease-out forwards !important; }
         .icon-menu.nav-close rect:nth-child(even) {
