--- a/assets/sass/variables/_animations.scss
+++ b/assets/sass/variables/_animations.scss
@@ -84,7 +84,7 @@
   }
 
   to {
-    top: ($header-height - $icon) / 2;
+    top: (($header-height - $icon) / 2) + $distance;
   }
 }
 // -----------------------------------------------------------------------------
