--- a/index.hbs
+++ b/index.hbs
@@ -19,6 +19,8 @@
   </header>
 {{/if}}
 
+{{> navigation-widget}}
+
 {{! The main content area on the homepage }}
 <main id="content" class="home-content" role="main">
 
