--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,6 @@ body {
   margin-top: 80px;
   max-width: 1280px;
   min-height: calc(100vh - 120px);
-  padding: 15px;
   padding-top: 0;
   width: 100%; }
 
@@ -811,6 +810,29 @@ h6 {
 .home-cases,
 .home-posts {
   min-height: 50vh; }
+
+.menu-widget {
+  padding: 20px 0;
+  position: relative;
+  width: 100%; }
+  .menu-widget > ul {
+    list-style: none;
+    margin-right: 0;
+    padding: 30px 15px 30px 45px;
+    width: 50%; }
+    .menu-widget > ul li {
+      font-size: 3rem;
+      font-weight: 700;
+      line-height: 1.11em; }
+  .menu-widget:before {
+    background-image: url("../img/dots-texture.png");
+    content: '';
+    left: 0;
+    min-height: 100%;
+    position: absolute;
+    top: 0;
+    width: 66%;
+    z-index: -1; }
 
 .post-template:not(.page-template) .main-nav {
   display: none; }
