--- a/assets/sass/partials/base/_navigation.scss
+++ b/assets/sass/partials/base/_navigation.scss
@@ -12,7 +12,7 @@
   left: 50%;
   max-width: $site-box;
   padding: 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   transform: translateX(-50%);
   width: 100%;
