--- a/assets/sass/sections/home/_index.scss
+++ b/assets/sass/sections/home/_index.scss
@@ -9,11 +9,38 @@
   animation: op-in .999s ease-out forwards; // Opacity In animation
   min-height: $section-height;
   position: relative;
-  top: calc(#{$fh1 * 4} + #{$distance * 3});
+  margin-top: calc(#{$fh1 * 4} + #{$distance * 3});
+
+  // Stripe
+  &::after {
+    background-color: $primary;
+    bottom: 0;
+    content: '';
+    display: block;
+    height: 20vh;
+    left: -5.5vw;
+    position: absolute;
+    transform: rotate(-45deg);
+    transform-origin: bottom left;
+    width: 200%;
+    z-index: -2;
+  }
+
+  // Dotted background
+  &::before {
+    background-image: url('../img/dots-texture.png');
+    content: '';
+    height: calc(#{$fh1 * 5} + #{$distance * 15});
+    left: 0;
+    position: absolute;
+    top: calc((#{$fh1 * 4} + #{$distance * 3}) * -1);
+    width: 66%;
+    z-index: -1;
+  }
 }
 
 .home-cases + .home-posts {
-  margin-top: $distance * 3;
+  margin-top: $distance * 5;
 }
 
 .home-cases,
@@ -21,37 +48,36 @@
   min-height: 50vh;
 }
 
+.home-posts > .thought{
+  margin-right: 0;
+  width: 66.66%;
+
+  @include mq(desktop) {
+    margin-right: $distance * 1.5;
+  }
+}
+
 
 // Menu ------------------------------------------------------------------------
 .menu-widget {
   padding: $distance * 2 0;
   position: absolute;
-  width: 100%;
+  right: 0;
+  width: 50%;
+  z-index: $z-top;
 
   // Menu list
   > ul {
     list-style: none;
     margin-right: 0;
     padding: $distance * 3 $distance * 1.5 $distance * 3 $distance * 4.5;
-    width: 50%;
+    width: 100%;
 
     li {
       font-size: $fh1;
       font-weight: $bold;
       line-height: $line-height;
     }
-  }
-
-  // Dotted background
-  &:before {
-    background-image: url('../img/dots-texture.png');
-    content: '';
-    left: 0;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    width: 66%;
-    z-index: -1;
   }
 }
 // -----------------------------------------------------------------------------
