--- a/assets/sass/partials/base/_general.scss
+++ b/assets/sass/partials/base/_general.scss
@@ -29,6 +29,7 @@ html {
 // Body properties -------------------------------------------------------------
 body {
   background-color: $white;
+  color: $black;
   // Font rendering
   font-family: $primary-font;
   font-feature-settings: 'kern';
