--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -7,7 +7,7 @@
 // -----------------------------------------------------------------------------
 // Nav block
 // -----------------------------------------------------------------------------
-.nav {
+body > .nav {
   background-color: $white;
   bottom: 0;
   color: $black;
