--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,10 +74,11 @@ body {
     overflow: hidden; }
 
 .site-wrapper {
-  margin-top: 80px;
   max-width: 1280px;
   min-height: calc(100vh - 120px);
-  padding-top: 0;
+  overflow-x: hidden;
+  padding-top: 30px;
+  position: relative;
   width: 100%; }
 
 .post-template:not(.page-template) .author .author-image {
@@ -106,21 +107,6 @@ body {
     font-size: 0.7rem;
     font-weight: 300; }
 
-.author-profile .author-image {
-  border-radius: 50%;
-  font-size: 0;
-  height: 150px;
-  overflow: hidden;
-  width: 150px; }
-  .author-profile .author-image > .img {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: block;
-    font-size: 0;
-    height: 100%;
-    width: 100%; }
-
 .case-study {
   display: inline-block;
   margin-right: -5px;
@@ -133,6 +119,11 @@ body {
   max-width: 630px;
   position: relative;
   width: calc(50vw - 10px); }
+  .case-study:hover {
+    border: 6px solid white; }
+    @media (max-width: 640px) {
+      .case-study:hover {
+        border: 0; } }
   @media (max-width: 640px) {
     .case-study {
       display: block;
@@ -161,11 +152,6 @@ body {
     transition: all 75ms;
     width: 100%;
     z-index: 0; }
-    .case-study > a:hover {
-      border: 10px solid white; }
-      @media (max-width: 640px) {
-        .case-study > a:hover {
-          border: 0; } }
   .case-study > section {
     background-color: white;
     bottom: 10px;
@@ -190,13 +176,13 @@ body {
     border-color: #ff3c3c; }
 
 .site-footer {
-  background-color: #223347;
+  background-color: black;
   height: 40px;
   position: relative;
   width: 100%; }
   .site-footer .copyright {
     bottom: 0;
-    color: #4b719d;
+    color: #404040;
     font-size: 0.7rem;
     line-height: 40px;
     position: absolute;
@@ -207,7 +193,8 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  height: calc(100vh - 95px);
+  height: calc(100vh - 120px);
+  max-height: 1066.66667px;
   min-height: 450px;
   position: relative; }
   .hero-section.no-cover {
@@ -396,12 +383,8 @@ body > .nav {
   animation: header-in .333s ease-out forwards;
   border-bottom: 6px solid #223347;
   height: 80px;
-  left: 50%;
   max-width: 1280px;
   padding: 0;
-  position: absolute;
-  top: 0;
-  transform: translateX(-50%);
   width: 100%;
   z-index: 10000; }
   @media (max-width: 1280px) {
@@ -774,10 +757,29 @@ h6 {
 .about-content {
   text-align: center; }
   .about-content > .post {
-    text-align: left; }
+    margin-left: 0;
+    text-align: left;
+    width: 66.66%; }
 
 .author-profile {
   padding: 30px 0; }
+  .author-profile .author-image {
+    animation: blured-out .999s ease-out forwards;
+    font-size: 0;
+    height: 66.66vw;
+    margin-left: 0;
+    max-height: 850px;
+    max-width: 850px;
+    overflow: hidden;
+    width: 66.66vw; }
+    .author-profile .author-image > .img {
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: block;
+      font-size: 0;
+      height: 100%;
+      width: 100%; }
   .author-profile .author-bio {
     padding: 30px;
     text-align: center; }
@@ -812,13 +814,13 @@ h6 {
   animation: op-in .999s ease-out forwards;
   min-height: calc(100vh - 95px);
   position: relative;
-  margin-top: calc(12rem + 30px); }
+  margin-top: calc(9rem + 30px); }
   .home-content::after {
     background-color: #ff3c3c;
     bottom: 0;
     content: '';
     display: block;
-    height: 20vh;
+    height: 15vh;
     left: -5.5vw;
     position: absolute;
     transform: rotate(-45deg);
@@ -831,8 +833,8 @@ h6 {
     height: calc(15rem + 150px);
     left: 0;
     position: absolute;
-    top: calc((12rem + 30px) * -1);
-    width: 66%;
+    top: calc((9rem + 30px) * -1);
+    width: 66.66%;
     z-index: -1; }
 
 .home-cases + .home-posts {
@@ -858,12 +860,15 @@ h6 {
   .menu-widget > .nav > ul {
     list-style: none;
     margin-right: 0;
-    padding: 30px 15px 30px 45px;
+    padding: 30px 15px 30px;
+    text-align: center;
     width: 100%; }
     .menu-widget > .nav > ul li {
-      font-size: 3rem;
+      font-size: 3.3rem;
       font-weight: 700;
-      line-height: 1.11em; }
+      line-height: 1.11em;
+      text-align: left;
+      width: 66.66%; }
 
 .post-template:not(.page-template) .main-nav {
   display: none; }
